<resources>
    <string name="app_name">BlockCOVID</string>
    <string name="title_home">Home</string>
    <string name="title_rooms">Rooms</string>
    <string name="title_settings">Settings</string>
    <string name="title_login">Login</string>
    <string name="title_account">Account</string>
    <string name="title_scanner">Scanner</string>
    <string name="title_desks">Desks</string>
    <string name="title_room1">Room1</string>
    <string name="title_room2">Room2</string>
    <string name="title_goRoom1">Go to Room1</string>
    <string name="title_goRoom2">Go to Room2</string>
    <string name="title_reservation">Reservation</string>
    <string name="title_edit_reservation">Edit Reservation</string>
    <string name="title_reserve">Reserve</string>
    <string name="title_log">Log</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_logout">Logout</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Insert old password:</string>
    <string name="new_password">Insert new password:</string>
    <string name="repeat_password">Repeat new password:</string>
    <string name="password_changed">Password changed</string>
    <string name="password_change_failed">Password change failed</string>
    <string name="invalid_username">Username not valid</string>
    <string name="invalid_password">Password must be at least 6 characters long</string>
    <string name="different_password">Passwords do not match</string>
    <string name="old_password_incorrect">Old passwords is incorrect</string>
    <string name="invalid_token">Incorrect token</string>
    <string name="incorrect_credentials">Incorrect credentials</string>
    <string name="invalid_time">Invalid times</string>
    <string name="invalid_date">Invalid date</string>
    <string name="empty_field">This field cannot be empty</string>
    <string name="login_failed">Login failed</string>
    <string name="selected_room">Room:</string>
    <string name="selected_desk">Desk:</string>
    <string name="selected_desk_x">X:</string>
    <string name="selected_desk_y">Y:</string>
    <string name="select_time_to">Arrival time: </string>
    <string name="select_time_from">Exit time: </string>
    <string name="select_day">Day: </string>
    <string name="dark_theme">Enable dark theme:</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="reservation_successful">Successful reservation</string>
    <string name="reservation_failed">Reservation failed</string>
    <string name="reservation_edited">Reservation modified</string>
    <string name="reservation_deleted">Reservation removed</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="timeout">Timeout</string>
    <string name="connection_error">Connection error</string>
    <string name="error">Error:</string>
    <string name="room_status">Status:</string>
    <string name="desks_taken">Desks taken:</string>
    <string name="room_clean">clean</string>
    <string name="room_to_clean">to clean</string>
    <string name="room_open">Open</string>
    <string name="room_closed">Closed</string>
    <string name="room_is_closed">Room closed at this time</string>
    <string name="room_is_closed_day">Room closed this day</string>
    <string name="room_cleaned">Room cleaned</string>
    <string name="room_empty">Room empty</string>
    <string name="no_rooms">No rooms</string>
    <string name="my_reservations">My reservations</string>
    <string name="reservation_id">Reservation ID:</string>
    <string name="time">Time:</string>
    <string name="day">Day:</string>
    <string name="no_reservations">No reservations</string>
    <string name="status">Status:</string>
    <string name="next_reservation">Next reservation:</string>
    <string name="reservation_ends">Reservation ends at:</string>
    <string name="none">None</string>
    <string name="desk_available">Desk available</string>
    <string name="desk_unavailable">Desk unavailable</string>
    <string name="desk_reserved">Desk reserved</string>
    <string name="reservation_old">Reservation too old</string>
    <string name="reservation_expired">Reservation expired</string>
    <string name="nfc_disabled">NFC reader unavailable</string>
    <string name="nfc_available">NFC reader available</string>
    <string name="read_rfid">Bring the phone close to the RFID tag </string>
    <string name="verify_nfc">Verify NFC reader availability:</string>
    <string name="check">Check</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="clean_status">Clean Status:</string>
    <string name="desk_clean">Clean</string>
    <string name="desk_dirty">Dirty</string>
    <string name="cleaned_yourself">Cleaned yourself?</string>
    <string name="reservation_started">Reservation started</string>
    <string name="reservation_ended">Reservation ended</string>
    <string name="reservation_almost_ended">Reservation almost ended</string>
    <string name="last_reservation">End last reservation</string>
    <string name="reservation_ended_long">Open the app, scan the RFID tag and press \"End\"</string>
</resources>