<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/room_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/room_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="8dp"
            android:text="@string/title_rooms"
            android:textAppearance="?attr/textAppearanceHeadline6" />

        <TextView
            android:id="@+id/desks_taken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="40dp"
            android:text="@string/desks_taken"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="?android:attr/textColorSecondary" />

        <TextView
            android:id="@+id/monday"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="end"
            android:layout_marginEnd="160dp"
            android:layout_marginTop="16dp"
            android:text="@string/monday"
            android:textColor="?colorError"
            android:textAppearance="?attr/textAppearanceBody2" />

        <TextView
            android:id="@+id/tuesday"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="end"
            android:layout_marginEnd="120dp"
            android:layout_marginTop="16dp"
            android:text="@string/tuesday"
            android:textColor="?colorError"
            android:textAppearance="?attr/textAppearanceBody2" />

        <TextView
            android:id="@+id/wednesday"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="end"
            android:layout_marginEnd="80dp"
            android:layout_marginTop="16dp"
            android:text="@string/wednesday"
            android:textColor="?colorError"
            android:textAppearance="?attr/textAppearanceBody2" />

        <TextView
            android:id="@+id/thursday"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="end"
            android:layout_marginEnd="160dp"
            android:layout_marginTop="36dp"
            android:text="@string/thursday"
            android:textColor="?colorError"
            android:textAppearance="?attr/textAppearanceBody2" />

        <TextView
            android:id="@+id/friday"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="end"
            android:layout_marginEnd="120dp"
            android:layout_marginTop="36dp"
            android:text="@string/friday"
            android:textColor="?colorError"
            android:textAppearance="?attr/textAppearanceBody2" />

        <TextView
            android:id="@+id/saturday"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="end"
            android:layout_marginEnd="80dp"
            android:layout_marginTop="36dp"
            android:text="@string/saturday"
            android:textColor="?colorError"
            android:textAppearance="?attr/textAppearanceBody2" />

        <TextView
            android:id="@+id/room_open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="12dp"
            android:text="@string/room_open"
            android:textColor="?colorPrimary"
            android:textAppearance="?attr/textAppearanceHeadline6" />

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>