<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/user_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.sweven.blockcovid.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_scanner"
            app:destination="@id/navigation_scanner" />
    </fragment>
    <action
        android:id="@+id/action_global_navigation_home"
        app:destination="@id/navigation_home"
        app:popUpTo="@id/navigation_home"
        app:popUpToInclusive="true" />

    <fragment
        android:id="@+id/navigation_user_rooms"
        android:name="com.sweven.blockcovid.ui.userRooms.UserRoomsFragment"
        android:label="@string/title_rooms"
        tools:layout="@layout/fragment_user_rooms" >
        <action
            android:id="@+id/action_navigation_user_rooms_to_navigation_room_view"
            app:destination="@id/navigation_room_view" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.sweven.blockcovid.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <activity
        android:id="@+id/navigation_login"
        android:name="com.sweven.blockcovid.ui.login.LoginActivity"
        android:label="@string/title_login"
        tools:layout="@layout/activity_login" />
    <action android:id="@+id/action_global_navigation_login" app:destination="@id/navigation_login"/>

    <fragment
        android:id="@+id/navigation_user_account"
        android:name="com.sweven.blockcovid.ui.userAccount.UserAccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_user_account" >
        <action
            android:id="@+id/action_navigation_user_account_to_navigation_change_password"
            app:destination="@id/navigation_change_password" />
        <action
                android:id="@+id/action_navigation_user_account_to_navigation_reservation_view"
                app:destination="@id/navigation_reservation_view" />
    </fragment>
    <action android:id="@+id/action_global_navigation_user_account" app:destination="@id/navigation_user_account"/>

    <fragment
        android:id="@+id/navigation_change_password"
        android:name="com.sweven.blockcovid.ui.changePassword.ChangePasswordFragment"
        android:label="@string/change_password"
        tools:layout="@layout/fragment_user_account" >
        <action
            android:id="@+id/action_navigation_change_password_to_navigation_user_account"
            app:destination="@id/navigation_user_account"
            app:popUpTo="@id/navigation_user_account"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_scanner"
        android:name="com.sweven.blockcovid.ui.scanner.ScannerFragment"
        android:label="@string/title_scanner"
        tools:layout="@layout/fragment_scanner" />

    <fragment
        android:id="@+id/navigation_room_view"
        android:name="com.sweven.blockcovid.ui.roomView.RoomViewFragment"
        tools:layout="@layout/fragment_room_view" >
        <argument
            android:name="roomName"
            app:argType="string"
            android:defaultValue="default" />
        <argument
                android:name="openingTime"
                app:argType="string"
                android:defaultValue="default" />
        <argument
                android:name="closingTime"
                app:argType="string"
                android:defaultValue="default" />
        <argument
                android:name="daysOpen"
                app:argType="string[]" />
        <action
            android:id="@+id/action_navigation_room_view_to_navigation_reservation"
            app:destination="@id/navigation_reservation" />
    </fragment>

    <fragment
            android:id="@+id/navigation_reservation_view"
            android:name="com.sweven.blockcovid.ui.userReservations.UserReservationsFragment"
            android:label="@string/my_reservations"
            tools:layout="@layout/fragment_user_reservations" >
        <argument
                android:name="timestamp"
                app:argType="string"
                android:defaultValue="default" />
        <argument
                android:name="deskX"
                app:argType="string"
                android:defaultValue="default" />
        <argument
                android:name="deskY"
                app:argType="string"
                android:defaultValue="default" />
        <argument
                android:name="deskId"
                app:argType="string"
                android:defaultValue="default" />
    </fragment>

    <fragment
        android:id="@+id/navigation_reservation"
        android:name="com.sweven.blockcovid.ui.reservation.ReservationFragment"
        android:label="@string/title_reservation"
        tools:layout="@layout/fragment_reservation" >
        <argument
            android:name="deskX"
            app:argType="string"
            android:defaultValue="0" />
        <argument
            android:name="deskY"
            app:argType="string"
            android:defaultValue="0" />
        <argument
                android:name="arrival"
                app:argType="string"
                android:defaultValue="default" />
        <argument
                android:name="exit"
                app:argType="string"
                android:defaultValue="default" />
        <argument
                android:name="date"
                app:argType="string"
                android:defaultValue="default" />
        <argument
            android:name="roomId"
            app:argType="string"
            android:defaultValue="default" />
        <argument
                android:name="deskId"
                app:argType="string"
                android:defaultValue="default" />
    </fragment>

    <activity
        android:id="@+id/navigation_main"
        android:name="com.sweven.blockcovid.UserActivity"
        android:label="@string/app_name"
        tools:layout="@layout/activity_main" />

    <activity
        android:id="@+id/navigation_start"
        android:name="com.sweven.blockcovid.StartActivity"
        android:label="@string/app_name"
        tools:layout="@layout/activity_start" />

    <activity
        android:id="@+id/navigation_cleaner"
        android:name="com.sweven.blockcovid.CleanerActivity"
        android:label="@string/app_name"
        tools:layout="@layout/activity_cleaner" />
</navigation>