<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginStart="106dp"
        android:layout_marginTop="420dp"
        android:layout_marginEnd="106dp"
        android:onClick="logout"
        android:text="@string/title_activity_logout"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="107dp"
        android:layout_height="29dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="288dp"
        android:layout_weight="3"
        android:text="@string/prompt_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="104dp"
        android:layout_height="33dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="360dp"
        android:layout_weight="4"
        android:text="@string/prompt_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.012"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

</androidx.constraintlayout.widget.ConstraintLayout>