<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.sweven.blockcovid.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/selectedRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:text="@string/selected_room"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/idReservedRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:textColor="@color/purple_200"
        app:layout_constraintStart_toEndOf="@+id/selectedRoom"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/selectedDesk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:text="@string/selected_desk"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectedRoom" />

    <TextView
        android:id="@+id/idReservedDesk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/purple_200"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/selectedDesk"
        app:layout_constraintTop_toBottomOf="@id/idReservedRoom" />

    <TextView
        android:id="@+id/arrivalTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:text="@string/select_time_to"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectedDesk" />

    <EditText
        android:id="@+id/editArrivalTime"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:focusable="false"
        android:inputType="time"
        android:onClick="openTimePicker"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/arrivalTime"
        app:layout_constraintTop_toBottomOf="@+id/idReservedDesk" />

    <TextView
        android:id="@+id/exitTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:text="@string/select_time_from"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arrivalTime" />

    <EditText
        android:id="@+id/editExitTime"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:focusable="false"
        android:inputType="time"
        android:onClick="openTimePicker"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/exitTime"
        app:layout_constraintTop_toBottomOf="@+id/editArrivalTime" />

    <TextView
        android:id="@+id/reservationDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="14"
        android:text="@string/select_day"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exitTime" />

    <CalendarView
        android:id="@+id/selectDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:maxDate="01/01/2023"
        android:minDate="01/01/2021"
        app:layout_constraintBottom_toTopOf="@+id/reserveButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reservationDate" />

    <Button
        android:id="@+id/reserveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:onClick="reserve"
        android:text="@string/title_prenota"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>